@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.301 2006/02/14 15:24:10 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.302 2006/02/14 15:56:43 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -171,6 +171,10 @@ PH/33 When a queue run was abandoned because the load average was too high, a
       selector is set. In addition, the log line for abandonment now contains
       information about the queue run such as the pid. This is always present
       in "start" and "stop" lines but was omitted from the "abandon" line.
+
+PH/34 Omit spaces between a header name and the colon in the error message that
+      is given when verify = headers_syntax fails (if there are lots of them,
+      the message gets confusing).
 
 
 Exim version 4.60
